# esp32_exam

./: .gitignore
esp32s3_project/01-bootkey/: CMakeLists.txt  sdkconfig.defaults
esp32s3_project/01-bootkey/main/: CMakeLists.txt  bootkey.c
esp32s3_project/02-QMI8658/main/main/: CMakeLists.txt  esp32_s3_szp.c  esp32_s3_szp.h
esp32s3_project/04_ES7210/04_ES7210/: CMakeLists.txt
esp32s3_project/04_ES7210/04_ES7210/main/: 04_ES7210.c  CMakeLists.txt
esp32s3_project/05_LCD/lcd/main/: CMakeLists.txt
esp32s3_project/05_es8311/05_ES8311/: CMakeLists.txt
esp32s3_project/05_es8311/05_ES8311/driver/inc/: esp32_s3_szp.h
esp32s3_project/05_es8311/05_ES8311/driver/src/: esp32_s3_szp.c
esp32s3_project/05_es8311/05_ES8311/main/: 05_ES8311.c  CMakeLists.txt
esp32s3_project/06_CAMERA/camera/driver/inc/: esp32_s3_szp.h
esp32s3_project/06_CAMERA/camera/driver/src/: esp32_s3_szp.c
esp32s3_project/06_CAMERA/camera/main/: CMakeLists.txt  camera.c
esp32s3_project/07_LVGL/lvgl/driver/inc/: esp32_s3_szp.h
esp32s3_project/07_LVGL/lvgl/main/: CMakeLists.txt  lvgl.c
esp32s3_project/08_WIFI/wifi_scan/app/inc/: app_ui.h
esp32s3_project/08_WIFI/wifi_scan/app/src/: app_ui.c
esp32s3_project/08_WIFI/wifi_scan/driver/src/: esp32_s3_szp.c
esp32s3_project/08_WIFI/wifi_scan/main/: CMakeLists.txt  wifi_scan.c
esp32s3_project/09_BLE/ble/driver/inc/: ble_hidd_demo.h  esp32_s3_szp.h
esp32s3_project/09_BLE/ble/driver/src/: ble_hidd_demo.c
esp32s3_project/09_BLE/ble/main/: CMakeLists.txt  ble.c  idf_component.yml
esp32s3_project/LCD/lcd/main/: lcd.c
(+2 files in other folders)
